fix: date-select gap

--- a/src/components/styles/elements/form-item.css
+++ b/src/components/styles/elements/form-item.css
@@ -33,7 +33,7 @@
     &.ipt-date {
       .ipt-sep {
         &:not(:last-of-type) {
-          margin-right: 0.4rem;
+          margin-right: 0.2rem;
         }
       }
 
